[package]
name = "peaq-frame-ext"
version = "0.1.0"
edition = "2021"
description = "Peaq's substrate-frame-like extensions"
authors = ["peaq <https://github.com/peaqnetwork>"]
license = "Apache-2.0"
publish = false
repository = "https://github.com/peaqnetwork/peaq-frame-ext/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
