[package]
name = "peaq-frame-ext"
version = "0.1.0"
edition = "2021"
description = "Peaq's substrate-frame-like extensions"
authors = ["peaq <https://github.com/peaqnetwork>"]
license = "Apache-2.0"
publish = false
repository = "https://github.com/peaqnetwork/peaq-frame-ext/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1.2", default-features = false, features = ["derive"] }
frame-support = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.29", default-features = false }
frame-system = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.29", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
sp-runtime = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.29", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-runtime/std",
]
# Mockup implementations
mockup-avg-currency = []