[package]
name = "peaq-frame-ext"
version = "0.2.0"
edition = "2021"
description = "Peaq's substrate-frame-like extensions"
authors = ["peaq <https://github.com/peaqnetwork>"]
license = "Apache-2.0"
publish = false
repository = "https://github.com/peaqnetwork/peaq-frame-ext/"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = ["derive"] }
frame-support = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38", default-features = false }
frame-system = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38", default-features = false }
scale-info = { version = "2.1", default-features = false, features = ["derive"] }
sp-runtime = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-runtime/std",
]
# Mockup implementations
mockup-avg-currency = []
